# tomato-automata

./: .gitignore  CMakeLists.txt  README.md  run.sh
src/: app.cpp  app.h  common.cpp  common.h  main.cpp
src/automata/: automata.h  cyclic.cpp  generations.cpp  langtons_ant.cpp  larger_than_life.cpp  life.cpp  neumann_binary.cpp  rules_table.cpp  weighted_life.cpp
